hphp/hack/test/package/package_access/cross_package_generics.php.exp.v2
error: Typing[4472] Cannot access symbol IFoo defined in package pkg2 which may not be available [1]
-> IFoo is defined in cross_package_generics.php--foo.php [2]
-> IFoo belongs to package pkg2 by this package override [3]
-> package pkg1 is available because the current file belongs to it by this package definition [4]

cross_package_generics.php--bar.php:53:23
    51 | 
    52 | // IFoo is from pkg2, so accessing the symbol itself errors
[1] 53 | class Bar2 implements IFoo<TBar> {} // error: IFoo is cross-package
    54 | 
    55 | // Collection literal explicit targs: should NOT error

cross_package_generics.php--foo.php:5:11
     1 | <?hh
     2 | // package pkg2
[3]  3 | <<file: __PackageOverride('pkg2')>>
     4 | type TFoo = int;
[2]  5 | interface IFoo<T> {}
     6 | class Foo {}

PACKAGES.toml:3:11
     1 | [packages]
     2 | 
[4]  3 | [packages.pkg1]
     4 | include_paths=["//"]
     5 | 

1 error found
